Fixed most of the layout issues in the addRules forms. Spacing still needs a little work.

--- a/src/components/AddRules/AddRules.css
+++ b/src/components/AddRules/AddRules.css
@@ -1,42 +1,14 @@
-#value-category-membership {
-    align-content: center;
-    vertical-align: middle;
-    box-sizing: border-box;
-    padding-bottom: 6px;
-    margin-right: 6px;
-}
-
-#value-category-score {
-    align-content: center;
-    vertical-align: middle;
-    box-sizing: border-box;
-    margin-bottom: 6px;
-    margin-right: 6px;
-}
-
-#membership-rule-button {
-    display: inline-flex;
-    justify-content: flex-end;
-    margin: 4rem 0 0 19rem;
-    align-self: flex-end;
-}
-
-#score-rule-button {
-    display: inline-flex;
-    justify-content: flex-end;
-    margin: 3rem 0 0 19rem;
-    align-self: flex-end;
-}
-
 .value-category {
     align-content: center;
     vertical-align: middle;
     box-sizing: border-box;
-    padding-bottom: 10px;
+    padding-bottom: 10px; 
     margin-right: 6px;
-
 }
 
+.value-category-membership {
+    margin-bottom: 10px;
+}
 .rules-form-container {
     background: linear-gradient(#f7f7e0, #f6ded7);
     display: grid;
@@ -52,6 +24,10 @@
 
 }
 
+.membership-form-control {
+    margin-bottom: 20px;
+}
+
 .aR1 {
     display: flex;
     grid-column-start: 1;
@@ -64,7 +40,7 @@
 .aR {
     display: inline-flex;
     justify-content: flex-end;
-    margin: 2rem 0 0 3rem;
+    margin: 4rem 0 0 19rem;
     padding-left: 30px;
     align-self: flex-end;
 }
@@ -80,7 +56,7 @@
     margin-bottom: 2rem;
     margin-left: 37%;
     padding: 2rem;
-    transform: translateX(-50%);
+    transform: translateX(-28%);
     width: 400px;
 }
 
@@ -103,7 +79,7 @@
 .membership-label {
     display: flex;
     align-content: flex-start;
-    margin-bottom: 10px;
+    margin-bottom: 22px;
     width: 34em;
 }
 
